Fix fetchTransactions for sql databases

Base implementation by Thomas Baumgart from loval feature branch,
adapted to 5.x branch by Ralf Habacker.

Implementation verified with mymoneydatabasemgrtest.

BUG:410994
FIXED-IN:5.0.7